--- a/app/views/modal/_password.html.haml
+++ b/app/views/modal/_password.html.haml
@@ -3,10 +3,10 @@
     .modal-content
       .modal-header
         %h5.modal-title#modal-passwd-label= t(".title")
-        %button.btn-close{ data: { dismiss: :modal }, type: :button }
+        %button.btn-close{ data: { bs_dismiss: :modal }, type: :button }
           %span.visually-hidden= t("voc.close")
       .modal-body
         = f.password_field :current_password, autocomplete: "current-password"
       .modal-footer
-        %button.btn.btn-default{ data: { dismiss: :modal }, type: :button }= t("voc.cancel")
+        %button.btn.btn-default{ data: { bs_dismiss: :modal }, type: :button }= t("voc.cancel")
         = f.primary class: 'btn btn-primary', data: { disable_with: false }
