--- a/app/views/modal/_privileges.html.haml
+++ b/app/views/modal/_privileges.html.haml
@@ -4,11 +4,11 @@
       .modal-header
         %h5.modal-title#modal-privileges-label
           = t(".title", user: user.screen_name)
-        %button.btn-close{ data: { dismiss: :modal }, type: :button }
+        %button.btn-close{ data: { bs_dismiss: :modal }, type: :button }
           %span.visually-hidden= t("voc.close")
       %ul.list-group
         - if current_user.has_cached_role?(:administrator)
           = render "modal/privileges/item", privilege: "moderator", description: t(".role.moderator"), user: user
           = render "modal/privileges/item", privilege: "admin", description: t(".role.admin"), user: user
       .modal-footer
-        %button.btn.btn-primary{ name: "checked-privileges", type: :button, data: { dismiss: :modal } }= t("voc.close")
+        %button.btn.btn-primary{ name: "checked-privileges", type: :button, data: { bs_dismiss: :modal } }= t("voc.close")
