--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -13,7 +13,7 @@
     - @notifications.each do |notification|
       %li.card
         .card-body
-          .media
+          .d-flex
             = render "notifications/type/#{notification.target.class.name.downcase.split('::').last}", notification: notification
 
 - if @more_data_available
