--- a/app/views/inbox/_entry.html.haml
+++ b/app/views/inbox/_entry.html.haml
@@ -1,11 +1,12 @@
 .card.inbox-entry{ id: "inbox_#{i.id}", class: i.new? ? "inbox-entry--new" : "", data: { id: i.id } }
   .card-header
-    .media
+    .d-flex
       - unless i.question.author_is_anonymous
-        %a.pull-left{ href: user_path(i.question.user) }
-          %img.answerbox__question-user-avatar.avatar-md{ src: i.question.user.profile_picture.url(:small), loading: :lazy }
-      .media-body
-        %h6.text-muted.media-heading.answerbox__question-user
+        .flex-shrink-0
+          %a.pull-left{ href: user_path(i.question.user) }
+            %img.answerbox__question-user-avatar.avatar-md{ src: i.question.user.profile_picture.url(:small), loading: :lazy }
+      .flex-grow-1
+        %h6.text-muted.answerbox__question-user
           - if i.question.author_is_anonymous
             %i.fas.fa-user-secret{ title: t('.anon_hint') }
           = t(".asked_html", user: user_screen_name(i.question.user, context_user: i.user, author_identifier: i.question.author_is_anonymous ? i.question.author_identifier : nil), time: time_tooltip(i.question))
@@ -15,7 +16,7 @@
               = t(".answers", count: i.question.answer_count)
         .answerbox__question-text= question_markdown i.question.content
       - if i.question.user_id != current_user.id || current_user.has_cached_role?(:administrator)
-        .pull-right
+        .flex-shrink-0.ms-auto
           .btn-group
             %button.btn.btn-default.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
               %span.caret
