--- a/app/views/moderation/inbox/_header.html.haml
+++ b/app/views/moderation/inbox/_header.html.haml
@@ -1,8 +1,9 @@
 .card.question--fixed{ class: hidden ? 'question--hidden' : '', tabindex: hidden ? -1 : '', aria: { hidden: hidden } }
   .container
     .card-body
-      .media
-        %a.pull-left{ href: user_path(user) }
-          %img.answerbox__question-user-avatar.avatar-md{ src: user.profile_picture.url(:medium) }
-        .media-body
+      .d-flex
+        .flex-shrink-0
+          %a{ href: user_path(user) }
+            %img.answerbox__question-user-avatar.avatar-md{ src: user.profile_picture.url(:medium) }
+        .flex-grow-1
           = t(".title_html", screen_name: user.screen_name, user_id: user.id)
