--- a/app/views/notifications/type/_expiredtwitterserviceconnection.html.haml
+++ b/app/views/notifications/type/_expiredtwitterserviceconnection.html.haml
@@ -1,8 +1,8 @@
-.media.notification
-  .notification__icon
+.d-flex.notification
+  .flex-shrink-0.notification__icon
     %i.fa.fa-2x.fa-fw.fa-twitter
-  .media-body
-    %h6.media-heading.notification__user
+  .flex-grow-1
+    %h6.notification__user
       = t(".heading")
     .notification__text
       = t(".text_html", settings_sharing: link_to(t(".settings_services"), services_path))
