--- a/app/views/notifications/type/_follow.html.haml
+++ b/app/views/notifications/type/_follow.html.haml
@@ -1,8 +1,8 @@
-.media.notification
-  .notification__icon
+.d-flex.notification
+  .flex-shrink-0.notification__icon
     %img.avatar-sm{ src: notification.target.source.profile_picture.url(:small), loading: :lazy }
-  .media-body
-    %h6.media-heading.notification__user
+  .flex-grow-1
+    %h6.notification__user
       = user_screen_name notification.target.source
     .notification__text
       = t(".heading_html", time: time_ago_in_words(notification.target.created_at))
