--- a/app/views/notifications/type/_reaction.html.haml
+++ b/app/views/notifications/type/_reaction.html.haml
@@ -1,7 +1,7 @@
-.media.notification
-  .notification__icon
+.d-flex.notification
+  .flex-shrink-0.notification__icon
     %i.fa.fa-2x.fa-fw.fa-smile-o
-  .media-body
+  .flex-grow-1
     .notification__heading
       %img.avatar-xs{ src: notification.target.user.profile_picture.url(:small), loading: :lazy }
       - if notification.target.parent_type == 'Answer'
@@ -16,7 +16,5 @@
               time: time_tooltip(notification.target))
     .list-group
       .list-group-item
-        .media.question-media
-          .media-body
-            %h6.notification__list-heading= t("activerecord.models.#{notification.target.parent_type.downcase}.one")
-            = markdown notification.target.parent.content[0..60] + (notification.target.parent.content.length > 60 ? '[...]' : '')
+        %h6.notification__list-heading= t("activerecord.models.#{notification.target.parent_type.downcase}.one")
+        = markdown notification.target.parent.content[0..60] + (notification.target.parent.content.length > 60 ? '[...]' : '')
