--- a/app/views/shared/_question.html.haml
+++ b/app/views/shared/_question.html.haml
@@ -1,19 +1,13 @@
 - type ||= nil
 .card.questionbox{ data: { id: q.id } }
   .card-body
-    .media
+    .d-flex
       - if type == 'discover'
-        .pull-left
+        .flex-shrink-0
           %a{ href: user_screen_name(q.user, link_only: true) }
             %img.avatar-md.me-2{ src: q.user&.profile_picture&.url(:small), loading: :lazy }
-      .media-body
-        - if user_signed_in?
-          .pull-right
-            .btn-group
-              %button.btn.btn-link.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
-                %span.caret
-              = render "actions/question", question: q
-        %h6.media-heading.text-muted.answerbox__question-user
+      .flex-grow-1
+        %h6.text-muted.answerbox__question-user
           = t("answerbox.header.asked_html", user: user_screen_name(q.user), time: time_tooltip(q))
           - if q.answer_count > 1
             ·
@@ -21,3 +15,9 @@
               = pluralize(q.answer_count, t("voc.answer"))
         .answerbox__question-text
           = question_markdown q.content
+      - if user_signed_in?
+        .flex-shrink-0.ms-auto
+          .btn-group
+            %button.btn.btn-link.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
+              %span.caret
+            = render "actions/question", question: q
