--- a/app/views/settings/profile/edit.html.haml
+++ b/app/views/settings/profile/edit.html.haml
@@ -14,9 +14,9 @@
           %img#profile-picture-cropper{ src: current_user.profile_picture.url(:medium) }
 
       .row.mb-2#profile-header-media
-        .col
+        .col-xs-12.col-md-6
           %img.mw-100.me-3{ src: current_user.profile_header.url(:mobile) }
-        .col-xs-12.mt-3.mt-sm-0.ps-3.pe-3
+        .col-xs-12.col-md-6.mt-3.mt-sm-0.ps-3.pe-3
           = f.file_field :profile_header, accept: APP_CONFIG[:accepted_image_formats].join(",")
 
       .row.d-none#profile-header-crop-controls
