--- a/app/assets/stylesheets/components/_answerbox.scss
+++ b/app/assets/stylesheets/components/_answerbox.scss
@@ -35,6 +35,7 @@
   &__action {
     padding-left: 0;
     padding-right: map.get($spacers, 1);
+    text-decoration: none;
 
     & i {
       font-size: 1.4rem;
