--- a/app/assets/stylesheets/components/_userbox.scss
+++ b/app/assets/stylesheets/components/_userbox.scss
@@ -26,6 +26,7 @@
     display: block;
     margin: map.get($spacers, 3) 0;
     text-align: center;
+    text-decoration: none;
   }
 
   .card-body {
