Fix badge colors in various places

--- a/app/assets/stylesheets/overrides/_list-group.scss
+++ b/app/assets/stylesheets/overrides/_list-group.scss
@@ -1,6 +1,6 @@
 .list-group-item {
   background-color: transparent;
-  
+
   &.active,
   &.active:hover {
     background-color: var(--primary);
@@ -14,8 +14,16 @@
 
 .list-group-item-action {
   color: RGB(var(--body-text));
-  
+
   &:hover, &:focus {
     background-color: var(--raised-accent);
+  }
+
+  .badge {
+    color: RGB(var(--body-text));
+  }
+
+  &.active .badge {
+    color: RGB(var(--primary-text));
   }
 }
