Make code HTML elements monospace again

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -70,6 +70,7 @@ $unicodeRangeValues in Lexend.$unicodeMap {
 "overrides/badges",
 "overrides/bootstrap-datetimepicker",
 "overrides/buttons",
+"overrides/code",
 "overrides/colors",
 "overrides/card",
 "overrides/dropdown",
