--- a/app/views/settings/mutes/_rule.html.haml
+++ b/app/views/settings/mutes/_rule.html.haml
@@ -1,4 +1,4 @@
-.form-group{ id: "rule_#{rule.id}" }
+.form-group.mb-3{ id: "rule_#{rule.id}" }
   .input-group
     %input.form-control{ disabled: true, value: rule.muted_phrase }
     .input-group-append
