--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,18 +1,19 @@
 @use "sass:map";
+@use "sass:math";
 
 .profile {
   &__avatar {
     display: block;
     width: map.get($avatar-sizes, "xl");
     height: map.get($avatar-sizes, "xl");
-    margin: -(map.get($avatar-sizes, "xl") / 2.5) map.get($spacers, 4) 0;
+    margin: -(math.div(map.get($avatar-sizes, "xl"), 2.5)) map.get($spacers, 4) 0;
     border-radius: $avatar-border-radius;
     box-shadow: $box-shadow;
 
     @include media-breakpoint-up(sm) {
       width: map.get($avatar-sizes, "xxl");
       height: map.get($avatar-sizes, "xxl");
-      margin: -(map.get($avatar-sizes, "xxl") / 2) auto 0;
+      margin: -(math.div(map.get($avatar-sizes, "xxl"), 2)) auto 0;
     }
   }
 
