--- a/app/views/inbox/_push_settings.haml
+++ b/app/views/inbox/_push_settings.haml
@@ -1,5 +1,7 @@
 .card.push-settings.d-none
   .card-body
-    = t(".description")
-    %button.btn.btn-primary{ data: { action: "push-enable" } }= t("voc.y")
-    %button.btn{ data: { action: "push-dismiss" } }= t("voc.n")
+    .d-block.d-sm-flex
+      .align-self-center= t(".description")
+      .ms-sm-auto.mt-2.mt-sm-0
+        %button.btn.btn-primary{ data: { action: "push-enable" } }= t("voc.y")
+        %button.btn{ data: { action: "push-dismiss" } }= t("voc.n")
