Add allow long questions option to profile settings

--- a/app/views/settings/profile/edit.html.haml
+++ b/app/views/settings/profile/edit.html.haml
@@ -49,6 +49,8 @@
 
       = f.text_area :description
 
+      = f.check_box :allow_long_questions
+
       = f.primary
 
 - provide(:title, generate_title(t(".title")))
