--- a/app/views/settings/privacy/edit.html.haml
+++ b/app/views/settings/privacy/edit.html.haml
@@ -9,7 +9,7 @@
       = f.check_box :privacy_noindex
       = f.check_box :privacy_hide_social_graph
 
-      = f.primary
+      = f.primary t("voc.save")
 
 - provide(:title, generate_title(t(".title")))
 - parent_layout "user/settings"
