--- a/app/views/settings/theme/edit.html.haml
+++ b/app/views/settings/theme/edit.html.haml
@@ -110,7 +110,7 @@
   .card
     .card-body
       .pull-left
-        = f.primary
+        = f.primary t("voc.save")
 
 - provide(:title, generate_title(t(".title")))
 - parent_layout "user/settings"
