--- a/app/views/settings/profile/edit.html.haml
+++ b/app/views/settings/profile/edit.html.haml
@@ -49,7 +49,7 @@
 
       = f.text_area :description
 
-      = f.primary
+      = f.primary t("voc.save")
 
 - provide(:title, generate_title(t(".title")))
 - parent_layout "user/settings"
