--- a/app/views/answerbox/_header.html.haml
+++ b/app/views/answerbox/_header.html.haml
@@ -7,7 +7,7 @@
     .flex-grow-1
       %h6.text-muted.answerbox__question-user
         - if a.question.author_is_anonymous
-          %i.fas.fa-user-secret{ title: t(".anon_hint") }
+          %i.fas.fa-user-secret{ title: t("voc.anon_hint") }
         = t(".asked_html", user: user_screen_name(a.question.user, context_user: a.user, author_identifier: a.question.author_is_anonymous ? a.question.author_identifier: nil), time: time_tooltip(a.question))
         - if !a.question.author_is_anonymous && !a.question.direct
           ·
