Add formatting help markup/translations

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -30,6 +30,7 @@
       = render 'navigation/guest'
     = render 'shared/announcements'
     = yield
+    = render "shared/formatting"
     - if Rails.env.development?
       #debug
         %hr
