Add Stimulus controller to launch format popup

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -80,6 +80,7 @@ $unicodeRangeValues in Lexend.$unicodeMap {
 "overrides/minicolors",
 "overrides/modal",
 "overrides/navbar",
+"overrides/popover",
 "overrides/turbolinks",
 "overrides/toasts",
 "overrides/sweet-alert";
