--- a/app/views/inbox/_entry.html.haml
+++ b/app/views/inbox/_entry.html.haml
@@ -32,7 +32,7 @@
         %button.btn.btn-default.px-1{ name: "ib-options", data: { ib_id: i.id, state: :hidden } }
           %i.fa.fa-chevron-down
           %span.pe-none= t(".options")
-        %p.ms-auto.align-self-center.mt-2.mt-sm-0.text-center
+        %p.format-help.ms-auto.align-self-center.mt-2.mt-sm-0.text-center
           = render "shared/format_link"
     .card-footer.d-none{ id: "ib-options-#{i.id}" }
       %h4= t(".sharing.heading")
