Add dev env indicator to navigation

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -110,6 +110,7 @@ $unicodeRangeValues in Lexend.$unicodeMap {
 "components/inbox-actions",
 "components/inbox-entry",
 "components/mobile-nav",
+"components/navbar",
 "components/notifications",
 "components/profile",
 "components/push-settings",
