Add wrapper -body classes to answerbox sections

--- a/app/assets/stylesheets/components/_answerbox.scss
+++ b/app/assets/stylesheets/components/_answerbox.scss
@@ -16,6 +16,11 @@
     overflow: visible;
   }
 
+  &__question-body,
+  &__answer-body {
+    position: relative;
+  }
+
   &__answer-text {
     margin-bottom: map.get($spacers, 3);
   }
