Implement shared collapse partial

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -103,6 +103,7 @@ $unicodeRangeValues in Lexend.$unicodeMap {
 "components/answerbox",
 "components/avatars",
 "components/buttons",
+"components/collapse",
 "components/comments",
 "components/container",
 "components/entry",
