--- a/app/views/answerbox/_header.html.haml
+++ b/app/views/answerbox/_header.html.haml
@@ -14,9 +14,9 @@
           %a{ href: question_path(a.question.user.screen_name, a.question.id) }
             = t(".answers", count: a.question.answer_count)
       .answerbox__question-body{ data: { controller: "collapse" } }
-        .answerbox__question-text{ class: a.question.long? ? "collapsed" : "", data: { collapse_target: "content" } }
+        .answerbox__question-text{ class: a.question.long? && !display_all ? "collapsed" : "", data: { collapse_target: "content" } }
           = question_markdown a.question.content
-        - if a.question.long?
+        - if a.question.long? && !display_all
           = render "shared/collapse", type: "question"
     - if user_signed_in?
       .flex-shrink-0.ms-auto
