--- a/app/views/shared/_collapse.html.haml
+++ b/app/views/shared/_collapse.html.haml
@@ -1,4 +1,4 @@
-.collapser
+.collapser{ aria: { hidden: "true" } }
   %button.btn.btn-primary.btn-sm.shadow{ data: { collapse_target: "action" } }
     %span.shown-text= t(".#{type}.hide")
     %span.collapsed-text= t(".#{type}.show")
