Fix layout of announcements after Bootstrap 5 update

--- a/app/views/shared/_announcements.html.haml
+++ b/app/views/shared/_announcements.html.haml
@@ -1,9 +1,9 @@
 .announcement__container
   - @active_announcements.each do |announcement|
     .alert.announcement.alert-info.alert-dismissable.d-none{ data: { controller: 'announcement', "announcement-id-value": announcement.id } }
-      .container
-        %button.btn-close{ type: :button, data: { bs_dismiss: :alert, action: "click->announcement#close" } }
-        %p
+      .container.d-flex
+        %p.flex-grow-1
           = announcement.content
           - if announcement.link_present?
             %a.alert-link{ href: announcement.link_href }= announcement.link_text
+        %button.btn-close.ms-auto.flex-shrink-0{ type: :button, data: { action: "click->announcement#close" } }
