--- a/app/views/inbox/_entry.html.haml
+++ b/app/views/inbox/_entry.html.haml
@@ -14,7 +14,7 @@
             ·
             %a{ href: question_path(i.question.user.screen_name, i.question.id) }
               = t(".answers", count: i.question.answer_count)
-        .answerbox__question-body{ data: { controller: "collapse" } }
+        .answerbox__question-body{ data: { controller: i.question.long? ? "collapse" : nil } }
           .answerbox__question-text{ class: i.question.long? ? "collapsed" : "", data: { collapse_target: "content" } }
             = question_markdown i.question.content
           - if i.question.long?
