--- a/app/views/question/_question.html.haml
+++ b/app/views/question/_question.html.haml
@@ -13,7 +13,7 @@
               = user_screen_name question.user, author_identifier: identifier, url: false
             - else
               = t("answerbox.header.asked_html", user: user_screen_name(question.user, author_identifier: identifier), time: time_tooltip(question))
-          .answerbox__question-body{ data: { controller: "collapse" } }
+          .answerbox__question-body{ data: { controller: question.long? ? "collapse" : nil } }
             .answerbox__question-text{ class: question.long? ? "collapsed" : "", data: { collapse_target: "content" } }
               = question_markdown question.content
             - if question.long?
